k8s/react-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: react
  template:
    metadata:
      labels:
        component: react
    spec:
      containers:
        - name: react-app
          image: dieke102/se-498_01-react
          ports:
            - containerPort: 5000
