k8s/rails-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rails-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: rails
  ports:
    - port: 3000
      targetPort: 3000
