k8s/react-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: react
  ports:
    - port: 80
      targetPort: 5000
